♻️ refactor: 예외 처리 로직 및 관련 클래스 코드 개선
- `ApiResponse`를 활용하여 예외 처리 반환 구조 통합
- `GlobalExceptionHandler` 메서드 시그니처와 내부 로직 간소화
- 불필요한 주석 제거 및 클래스 구조 단순화
- `ValidationException`, `TechnicalException` 등 예외 클래스 생성자 축약
- `ErrorResponse` -> `ApiResponse`로 리턴 타입 변경
- 로깅 시 MDC 값을 활용하여 디버깅 정보 추가